objects/User_GEO_Region__e.object
<CustomObject>
    <fields>
        <fullName>GEO_Region__c</fullName>
        <label>GEO Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Id__c</fullName>
        <label>Owner Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <label>UserID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User GEO Region</label>
    <pluralLabel>User GEO Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>